# MAS

./: .gitignore  README.md
emergency_solver/: README.md  pyproject.toml
emergency_solver/src/emergency_solver/: crew.py  crewai_flow.html  emergency_crew_output.json  emergency_generator.py  emergency_report.json  emergency_report.md  final_plan.json  fire_crew_output.md  main.py  medical_crew_output.txt  police_crew_output.md
emergency_solver/src/emergency_solver/config/: emergency_tasks.yaml  fire_tasks.yaml  medical_tasks.yaml  police_agents.yaml
emergency_solver/src/emergency_solver/crews/: combiner_crew.py  emergency_crew.py  fire_crew.py  medical_crew.py  police_crew.py
emergency_solver/src/emergency_solver/crews/config/: combiner_agents.yaml  combiner_tasks.yaml  emergency_agents.yaml  emergency_tasks.yaml  fire_agents.yaml  fire_tasks.yaml  medical_agents.yaml  medical_tasks.yaml  police_agents.yaml  police_tasks.yaml
emergency_solver/src/emergency_solver/resources/: ambulances.json  fire_stations.json  generate_resources.py  hospitals.json  medical_personnel.json  police_stations.json  rescuers.json
emergency_solver/src/emergency_solver/schemas/: schemas.py
emergency_solver/src/emergency_solver/tools/: custom_tool.py
emergency_solver/src/emergency_solver/utils/: report_parser.py
