[project]
name = "emergency_solver"
version = "0.1.0"
description = "emergency_solver using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0"
]

[project.scripts]
emergency_solver = "emergency_solver.main:run"
run_crew = "emergency_solver.main:run"
train = "emergency_solver.main:train"
replay = "emergency_solver.main:replay"
test = "emergency_solver.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
